# Po_core

./: CHANGELOG.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/po_core/: __init__.py  cli.py  ensemble.py  po_self.py  po_trace.py  po_viewer.py
src/po_core/philosophers/: __init__.py  arendt.py  aristotle.py  badiou.py  base.py  confucius.py  deleuze.py  derrida.py  dewey.py  heidegger.py  jung.py  kierkegaard.py  lacan.py  levinas.py  merleau_ponty.py  nietzsche.py  peirce.py  sartre.py  wabi_sabi.py  watsuji.py  wittgenstein.py  zhuangzi.py
tests/unit/: conftest.py  test_cli.py  test_ensemble.py  test_po_self.py
